OVSDB User Guide documentation
Add documentation for managaging OVSDB Qos and Queue tables
with the OVSDB plugin.

v2 - move Qos and Queue header into the qos and queue doc file
v3 - restructure file hierarchy for OVSDB NetVirt User Docs.
v4 - added general sb plugin material
v5 - added hwvtep-southbound material
v6 - added NetVirt section
v7 - added an OVS with DPDK and OVSDB Netvirt section

Change-Id: Ib72237354000db782a4d4a267a530ddf71db4c9f
Signed-off-by: Eric Multanen <eric.w.multanen@intel.com>
Signed-off-by: Andre Fredette <afredette@redhat.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -62,6 +62,8 @@ include::openflowplugin/odl-ofp-user-guide.adoc[OpenFlow Plugin]
 
 include::opflex/agent-ovs-user.adoc[]
 
+include::ovsdb/odl-ovsdb-netvirt-user-guide.adoc[]
+
 include::bgpcep/odl-bgpcep-pcep-all-user.adoc[PCEP]
 
 include::packetcable/packetcable-user.adoc[PacketCable PCMM - CMTS Management]
