--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -60,6 +60,8 @@ include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
 
 include::openflowplugin/odl-ofp-user-guide.adoc[OpenFlow Plugin]
 
+include::ovsdb/odl-ovsdb-user-guide.adoc[OVSDB Plugin]
+
 include::opflex/agent-ovs-user.adoc[]
 
 include::bgpcep/odl-bgpcep-pcep-all-user.adoc[PCEP]
