Added section on ovsdb-library-developer.adoc.
OVSDB Library Developer Guide from the following wiki:
https://wiki.opendaylight.org/view/OVSDB:OVSDB_Library_Developer_Guide

Moved OVSDB-related sections to sub-sections under OVSDB NetVirt.

Change-Id: I0a500edceaaa40c4de55ef10ecff71ea875d3385
Signed-off-by: Andre Fredette <afredette@redhat.com>
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-openstack-developer.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-openstack-developer.adoc
@@ -1,6 +1,6 @@
-== OVSDB Openstack Developer Guide
+=== OVSDB Openstack Developer Guide
 
-=== Overview
+==== Overview
 The Open vSwitch database (OVSDB) Plugin component for OpenDaylight implements
 the OVSDB  https://tools.ietf.org/html/rfc7047[RFC 7047] management protocol
 that allows the southbound configuration of switches that support OVSDB. The
@@ -19,7 +19,7 @@ OpenDaylight manages the network flows for the OpenStack compute nodes via
 the OVSDB project, with the south-bound plugin. This section describes how to
 set that up, and how to tell when everything is working.
 
-=== OVSDB Openstack Architecture
+==== OVSDB Openstack Architecture
 The OpenStack integration architecture uses the following technologies: +
 
 * https://tools.ietf.org/html/rfc7047[RFC 7047] - The Open vSwitch Database Management Protocol
