--- a/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-developer.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-developer.adoc
@@ -1,3 +1,8 @@
+== OVSDB NetVirt
+
+include::ovsdb-developer.adoc[]
+
+include::ovsdb-library-developer.adoc[]
 
 include::ovsdb-southbound-developer.adoc[]
 
